codeformat corrected text overflow correction for smartphone

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,12 +1,3 @@
-p {
-  font-family: Georgia, serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: Verdana, sans-serif;
-  font-weight: bold;
-}
-
 body {
   font-family: Georgia, serif;
   background-color: LightGray;
@@ -16,9 +7,26 @@ body {
   margin-bottom: 10px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: Verdana, sans-serif;
+  font-weight: bold;
+}
+
+p {
+  font-family: Georgia, serif;
+}
+
+/* div {
+  border-left:1em solid transparent;
+  border-right:1em solid transparent;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+} */
+
 img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 iframe {
@@ -31,16 +39,7 @@ form {
   display: inline;
 }
 
-/* img {
-  object-fit:cover;
-} */
-
-/* .pianos {
-  font-family: Georgia, serif;
-  font-style: normal;
-  text-align: left;
-} */
-
+/* Begin: Diverse Classes */
 .textblock {
   background-color: white;
   margin-top: 30px;
@@ -51,12 +50,17 @@ form {
   border-radius: 25px;
   border: 1px solid gray;
   box-shadow: 5px 5px 5px black;
-  /* object-fit:cover; */
+
+  /* border-left:1em solid transparent;
+  border-right:1em solid transparent; */
+  text-overflow: ellipsis;
+  /* white-space: nowrap; */
+  overflow: hidden;
 }
 
 .right {
-float: right;
-margin-left: 10px;
+  float: right;
+  margin-left: 10px;
 }
 
 .licence {
@@ -75,8 +79,10 @@ margin-left: 10px;
   text-align: center;
 }
 
-.menuespace {
-  width: 20%;
+/* End: Diverse Classes */
+/* Begin: Needed Classes for Menue */
+.menuetable {
+  overflow-x: auto;
 }
 
 .menuetitle {
@@ -85,24 +91,8 @@ margin-left: 10px;
   font-size: 3em;
 }
 
-.pushbutton {
-  font-family: Georgia, serif;
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.pushbutton:hover .pushbutton {background-color: #3e8e41;}
-
-.menuebutton {
-  background-color: #04AA6D;
-  color: white;
-  /* margin: 16px */
-  padding: 16px;
-  font-size: 16px;
-  border: none;
+.menuespace {
+  width: 20%;
 }
 
 .menuefield a {
@@ -110,28 +100,16 @@ margin-left: 10px;
   display: inline-block;
 }
 
-.menuetable {
-  overflow-x: auto;
+.menuebutton {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
 }
 
-/* .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.menuefield:hover .menuebutton {
+  background-color: #3e8e41;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-} */
-
-/* .dropdown-content a:hover {background-color: #ddd;} */
-
-/* .dropdown:hover .dropdown-content {display: block;} */
-
-.menuefield:hover .menuebutton {background-color: #3e8e41;}
+/* End: Needed Classes for Menue */
